--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Dev-intensive</string>
+    <string name="txt_ask_bender">Введите вопрос</string>
 </resources>
